MEMORY-CONTEXT/export-dedup-status.txt.backup-20251125-013200

================================================================================
EXPORT-DEDUP EXECUTION REPORT
================================================================================
Started: 2025-11-25T01:30:55.940541
Completed: 2025-11-25T01:30:55.968184
Duration: 0.03 seconds
Status: ❌ FAILED
Exit Code: 1
================================================================================


🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐
📊 BACKUP & DEDUPLICATION RESULTS
🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐
🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐🔐


STANDARD ERROR:
================================================================================
  File "/Users/halcasteel/PROJECTS/coditect-rollout-master/submodules/core/coditect-core/scripts/export-dedup.py", line 727
    if not all_exports:
    ^^
SyntaxError: expected 'except' or 'finally' block

================================================================================

